--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ ul.btn li:last-child {
 }
 
 .header_to {
-     background-color: #fa8072;
+     background-color: #99bdd3;
      padding: 9px 0;#032154
 }
 
@@ -344,7 +344,7 @@ ul.lan li {
      position: absolute;
      right: -3px;
      top: 5px;
-     background: #f2db18;
+     background: #99bdd3;
      width: 20px;
      height: 21px;
      line-height: 15px;
@@ -401,7 +401,7 @@ ul.conta_icon li {
 
 ul.conta_icon li a i {
      padding-right: 5px;
-     color: #fa8072;
+     color: #99bdd3;
 }
 
 ul.conta_icon li a {
@@ -411,7 +411,7 @@ ul.conta_icon li a {
 }
 
 ul.conta_icon li a:hover {
-     color: #e26b5f;
+     color: #99bdd3;
      text-decoration: underline !important;
 }
 
@@ -441,7 +441,7 @@ ul.conta_icon li a:hover {
 }
 
 .header_bo {
-     background-color: #fa8072;
+     background-color: #6f9ab4;
      width: 100%;
      height: 70px;
 }
@@ -467,7 +467,7 @@ ul.conta_icon li a:hover {
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
      color: #ffffff;
-     background-color: #fad7c1;
+     background-color:#99bdd3;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
@@ -475,7 +475,7 @@ ul.conta_icon li a:hover {
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
      color: #ffffff;
-     background-color: #fad7c1;
+     background-color:#99bdd3;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -499,7 +499,7 @@ ul.sign li a i {
 .sign_btn {
      float: right;
      max-width: 161px;
-     background: #f2db18;
+     background: #99bdd3;
      font-size: 17px !important;
      width: 100%;
      text-align: center;
@@ -539,7 +539,7 @@ ul.sign li a i {
      line-height: 28px;
      padding-bottom: 20px;
      display: block;
-     color: #f2db18;
+     color: #fafbfd;
      font-size: 30px;
      font-weight: 600;
 }
@@ -567,7 +567,7 @@ ul.sign li a i {
      position: absolute;
      content: "";
      top: 3px;
-     border-right: #ffff00 solid 1px;
+     border-right: #99bdd3 solid 1px;
      border-width: 90px;
      height: 1px;
      right: -111px;
@@ -592,7 +592,7 @@ ul.sign li a i {
 
 .titlepage h2 {
      font-size: 36px;
-     color: #154492;
+     color: #6f9ab4 ;
      line-height: 45px;
      font-weight: bold;
      padding: 0;
@@ -601,7 +601,7 @@ ul.sign li a i {
 }
 
 .yellow {
-     color: #fa8072;
+     color: #6f9ab4;
      font-size: 17px;
      font-weight: bold;
      text-transform: uppercase;
@@ -688,7 +688,7 @@ ul.sign li a i {
 .about_box span {
      font-size: 17px;
      font-weight: 600;
-     color: #f2db18;
+     color: #6f9ab4;
      line-height: 30px;
      padding-top: 25px;
      text-transform: uppercase;
@@ -717,7 +717,7 @@ ul.sign li a i {
      margin-top: 7px;
      padding: 8px 0;
      margin-left: 40px;
-     background-color: #f2db18;
+     background-color: #99bdd3;
      max-width: 168px;
      width: 100%;
      display: inline-block;
@@ -777,12 +777,12 @@ ul.sign li a i {
 
 #ho_color:hover.service_box h3 {
      transition: ease-in all 0.5s;
-     color: #f2db18;
-     border-bottom: #f2db18 solid 3px;
+     color: #99bdd3;
+     border-bottom: #6f9ab4 solid 3px;
 }
 
 .service .read_more {
-     color: #f2db18 !important;
+     color: #99bdd3 !important;
      margin: 0 auto;
      max-width: 140px;
      width: 100%;
@@ -792,7 +792,7 @@ ul.sign li a i {
 }
 
 .service .read_more::before {
-     border-right: #f2db18 solid 1px;
+     border-right: #99bdd3 solid 1px;
      border-right-width: 1px;
      border-width: 90px;
 }
@@ -859,7 +859,7 @@ ul.sign li a i {
      transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
      text-align: center;
-     background-color: #ebd93cc2;
+     background-color: #99bdd3;
      width: 90%;
      height: 92%;
 }
@@ -894,7 +894,7 @@ ul.sign li a i {
 #myCarousel .carousel-control-prev {
      width: 60px;
      height: 60px;
-     background: #29426c;
+     background: #99bdd3;
      opacity: 1;
      display: flex;
      align-items: center;
@@ -908,12 +908,12 @@ ul.sign li a i {
 #myCarousel .carousel-control-next:hover,
 #myCarousel .carousel-control-prev:focus,
 #myCarousel .carousel-control-next:focus {
-     background: #f2db18;
+     background: #6f9ab4;
      color: #fff;
 }
 
 .portfolio .read_more {
-     color: #f2db18 !important;
+     color: #99bdd3 !important;
      margin: 0 auto;
      max-width: 140px;
      width: 100%;
@@ -923,7 +923,7 @@ ul.sign li a i {
 }
 
 .portfolio .read_more::before {
-     border-right: #f2db18 solid 1px;
+     border-right: #99bdd3 solid 1px;
      border-right-width: 1px;
      border-width: 90px;
 }
@@ -961,24 +961,24 @@ ul.sign li a i {
 .business .business_box h3 {
      font-weight: bold;
      font-size: 40px;
-     color: #29426c;
+     color: #6f9ab4;
      padding-bottom: 3px;
      line-height: 42px;
 }
 
 .business .business_box p {
-     color: #f2db18;
+     color: #6f9ab4;
      font-size: 19px;
      font-weight: bold;
 }
 
 .business .read_more {
-     color: #f2db18 !important;
+     color: #6f9ab4 !important;
      margin-top: 60px;
 }
 
 .business .read_more::before {
-     border-right: #f2db18 solid 1px;
+     border-right: #6f9ab4 solid 1px;
      border-width: 90px;
 }
 
@@ -1040,7 +1040,7 @@ ul.social_icont li a {
 }
 
 #ho_bg:hover.team_img img {
-     border: #e5d660 solid 15px;
+     border: #99bdd3 solid 15px;
      background-color: #ddd;
 }
 
@@ -1056,7 +1056,7 @@ ul.social_icont li a {
      bottom: 0;
      left: 0;
      transition: .5s ease;
-     background-color: #082a63de;
+     background-color: #b0c4de80;
      border-radius: 381px;
      width: 242px;
      margin: 0 auto;
@@ -1074,11 +1074,11 @@ ul.social_icont li a {
      padding: 5px;
      width: 20px;
      height: 20px;
-     border: #183971 solid 4px;
+     border: #99bdd3 solid 4px;
 }
 
 .team_Carousel .carousel-indicators li {
-     background-color: #f2db18;
+     background-color: #99bdd3;
      width: 15px;
      height: 15px;
      border-radius: 20px;
@@ -1123,7 +1123,7 @@ ul.social_icont li a {
      line-height: 28px;
      padding-top: 27px;
      display: inline-block;
-     color: #f2db18;
+     color: #99bdd3;
      text-transform: uppercase;
      margin-left: 20px;
      float: left;
@@ -1135,7 +1135,7 @@ ul.social_icont li a {
      line-height: 28px;
      color: #383737;
      text-align: left;
-     border: #f2db18 solid 1px;
+     border: #99bdd3 solid 1px;
      display: inline-block;
      margin-bottom: 30px;
 }
@@ -1150,13 +1150,13 @@ ul.social_icont li a {
 }
 
 .testimonial_Carousel .carousel-indicators li {
-     background-color: #f2db18;
+     background-color: #99bdd3;
      width: 15px;
      height: 15px;
 }
 
 .testimonial_Carousel .carousel-indicators .active {
-     background-color: #4231bd;
+     background-color: #6f9ab4;
 }
 
 #testimo .carousel-control-next,
@@ -1191,7 +1191,7 @@ ul.social_icont li a {
      color: #363636;
      font-size: 18px;
      font-weight: normal;
-     border-bottom: #003471 solid 1px !important;
+     border-bottom: #99bdd3 solid 1px !important;
      border: inherit;
 }
 
@@ -1204,14 +1204,14 @@ ul.social_icont li a {
      font-weight: normal;
      padding-top: 10px;
      height: 150px;
-     border-bottom: #003471 solid 1px !important;
+     border-bottom: #99bdd3 solid 1px !important;
      border: inherit;
 }
 
 .contact_form .send_btn {
      font-size: 20px;
      transition: ease-in all 0.5s;
-     background-color: #f2db18;
+     background-color: #b0c4de ;
      text-transform: uppercase;
      color: #fffefe;
      padding: 15px 0px;
@@ -1225,7 +1225,7 @@ ul.social_icont li a {
 }
 
 .contact_form .send_btn:hover {
-     background-color: #092352;
+     background-color: #99bdd3;
      transition: ease-in all 0.5s;
      color: #fff;
 }
@@ -1289,7 +1289,7 @@ ul.location_icon li a {
 }
 
 ul.location_icon li a:hover {
-     color: #eed818;
+     color: #99bdd3;
 }
 
 ul.social_icon {
@@ -1307,7 +1307,7 @@ ul.social_icon li:last-child {
 }
 
 ul.social_icon li a {
-     color: #0b2554;
+     color: #b0c4de;
      width: 40px;
      height: 40px;
      background: #fff;
@@ -1319,7 +1319,7 @@ ul.social_icon li a {
 }
 
 ul.social_icon li a:hover {
-     background: #eed818;
+     background: #99bdd3;
      color: #fff;
 }
 
@@ -1372,7 +1372,7 @@ ul.img_icon li {
 .main_form .send_btn {
      font-size: 17px;
      transition: ease-in all 0.5s;
-     background-color: #efd818;
+     background-color: #6f9ab4;
      text-transform: uppercase;
      color: #fff;
      padding: 9px 0px;
@@ -1401,14 +1401,14 @@ ul.img_icon li {
 }
 
 .copyright p {
-     color: #082557;
+     color: #b0c4de;
      font-size: 18px;
      line-height: 22px;
      text-align: center;
 }
 
 .copyright a {
-     color: #082557;
+     color: #b0c4de;
 }
 
 .copyright a:hover {
